kubernetes-manidfest/networking/networking.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paylane-ingress
spec:
  ingressClassName: nginx

  rules:

    # Frontend
    - host: paylane.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

    # Backend API
    - host: api.paylane.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
